fix: Fixed navbar position on mobile size

--- a/src/app/modules/home/home.component.css
+++ b/src/app/modules/home/home.component.css
@@ -154,24 +154,3 @@
   }
 }
 
-
-/* chat*/
-.type_msg {
-  padding: 1em 2em 1em;
-  border-top: 1px solid #c4c4c4;
-  position: relative;
-}
-
-.msg_send_btn {
-  background: #05728f none repeat scroll 0 0;
-  border: medium none;
-  border-radius: 50%;
-  color: #fff;
-  cursor: pointer;
-  font-size: 17px;
-  height: 33px;
-  right: 0;
-  top: 11px;
-  width: 33px;
-  text-align: right;
-}
