--- a/src/app/shared/components/nav-bar/nav-bar.component.css
+++ b/src/app/shared/components/nav-bar/nav-bar.component.css
@@ -34,7 +34,7 @@ a {
 #nav {
   width: 100%;
   height: 40px;
-  position: absolute;
+  position: relative;
   background: rgb(37, 42, 58);
   text-align: center;
 }
